--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dac
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=9191
+spring.datasource.driver-class-name=${env.SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.url=${env.SPRING_DATASOURCE_URL}
+spring.datasource.username=${env.SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${env.SPRING_DATASOURCE_PASSWORD}
+spring.jpa.show-sql=${env.SPRING_JPA_SHOW_SQL}
+spring.jpa.hibernate.ddl-auto=${env.SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${env.SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+server.port=${env.SERVER_PORT}
