--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
 			<version>${jakartaee}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-binding</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
