Ajustando usuario controller

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pareaqui</name>
 	<description>Demo project for Spring Boot</description>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
