ajustando procfile p executar no heroku

--- a/.env.dev
+++ b/.env.dev
@@ -5,4 +5,4 @@ SPRING_DATASOURCE_PASSWORD=0e14e439ec4fa0c9e4f5e60d61af5b306911bf67bb9b5cb697e25
 SPRING_JPA_SHOW_SQL=true
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
 SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
-SERVER_PORT=9191
+PORT=9191
