--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=${env.SPRING_DATASOURCE_PASSWORD}
 spring.jpa.show-sql=${env.SPRING_JPA_SHOW_SQL}
 spring.jpa.hibernate.ddl-auto=${env.SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.properties.hibernate.dialect=${env.SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
-server.port=${env.SERVER_PORT}
+server.port=${env.PORT}
