--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/dac
 SPRING_DATASOURCE_USERNAME=root
 SPRING_DATASOURCE_PASSWORD=
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
+SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5Dialect
 PORT=9191
