COrrigindo sobrecarga no bd na consulta de vagas

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>pareaqui</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pareaqui</name>
-	<description>Demo project for Spring Boot</description>
+	<description>PARE AQUI</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>8</java.version>
